--- a/entry/composer.json
+++ b/entry/composer.json
@@ -23,7 +23,9 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Pet\\": "../Pet/",
+            "UseCases\\": "../UseCases/"
         }
     },
     "autoload-dev": {
