--- a/entry/docker/nginx.conf
+++ b/entry/docker/nginx.conf
@@ -1,20 +1,12 @@
 server {
-    listen 80;
     index index.php index.html;
     server_name *.localhost localhost;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/entry/public;
 
-    location / {
-        try_files $uri /index.php?$args;
-
-        # kill cache
-        add_header Last-Modified $date_gmt;
-        add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-        if_modified_since off;
-        expires off;
-        etag off;
+  location / {
+            try_files $uri $uri/ /index.php$is_args$args;
     }
 
     location ~ \.php$ {
@@ -26,9 +18,4 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
-
-    proxy_connect_timeout 600;
-    proxy_send_timeout 600;
-    proxy_read_timeout 600;
-    send_timeout 600;
 }
